# dragonsweepyr

./: .gitignore  ARCHITECTURE_IMPROVEMENTS.md  ENTITY_SYSTEM_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml
docs/: Add_Tile_Usage.md  Board_Generation.md  Happiness_Function_Breakdown.md  Structure_Organization.md
ref/: game.js  gamelib.js
scratch/: anim_sprite.py  generation.py  sprite_breakdown.py  spritegroup.py  spritesheet.py
src/: __main__.py
src/dragonsweepyr/: __init__.py  __main__.py  config.py  const.py  dragons.py  dungeon.py  game.py  happiness.py  logger.py  main.py  player.py  resources.py  utils.py
src/dragonsweepyr/monsters/: __init__.py  creatures.py  entity_definitions.py  entity_examples.py  items.py  obstacles.py  spells.py  sprite_coords.json  tiles.py
tests/: loading_anim.py  spritesheet.py
